--- a/state_machine/fla_state_machine/CMakeLists.txt
+++ b/state_machine/fla_state_machine/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(fla_state_machine)
 
 set(CMAKE_CXX_STANDARD 14)
-
+find_package(Boost REQUIRED COMPONENTS timer)
 find_package(
   catkin REQUIRED
   COMPONENTS kr_mav_msgs
@@ -10,6 +10,7 @@ find_package(
              traj_opt_ros
              planning_ros_msgs
              actionlib
+             sensor_msgs
              actionlib_msgs
              action_planner
              action_trackers
@@ -26,11 +27,11 @@ target_include_directories(${PROJECT_NAME} PUBLIC include
 target_link_libraries(${PROJECT_NAME} PUBLIC ${catkin_LIBRARIES})
 
 add_executable(local_global_replan_server src/local_global_replan_server.cpp)
-target_link_libraries(local_global_replan_server PUBLIC ${PROJECT_NAME})
+target_link_libraries(local_global_replan_server PUBLIC ${PROJECT_NAME} Boost::timer)
 add_dependencies(local_global_replan_server ${${PROJECT_NAME}_EXPORTED_TARGETS}
                  ${catkin_EXPORTED_TARGETS})
 
-add_executable(path_replanner src/path_replanner.cpp)
-target_link_libraries(path_replanner PUBLIC ${PROJECT_NAME})
-add_dependencies(path_replanner ${${PROJECT_NAME}_EXPORTED_TARGETS}
-                 ${catkin_EXPORTED_TARGETS})
+# add_executable(path_replanner src/path_replanner.cpp)
+# target_link_libraries(path_replanner PUBLIC ${PROJECT_NAME})
+# add_dependencies(path_replanner ${${PROJECT_NAME}_EXPORTED_TARGETS}
+#                  ${catkin_EXPORTED_TARGETS})
