--- a/map_plan/map_plan_launch/config/mapper.yaml
+++ b/map_plan/map_plan_launch/config/mapper.yaml
@@ -17,6 +17,12 @@ global:
   dilate_xy: true
   dilate_z: false
 
+local: # local map range z and center_z will be the same as storage map
+  range_x: 60.0
+  range_y: 60.0
+  range_z: 7.0
+  resolution: 0.25
+  max_raycast_range: 30.0
 
 storage: # storage map max_raycat_range will be the same as local map
   center_x: 500.0
