--- a/control/control_launch/config/tracker_params_mp.yaml
+++ b/control/control_launch/config/tracker_params_mp.yaml
@@ -31,16 +31,16 @@ trajectory_planner:
   use_yaw: false # default false
   yaw_speed: 0.2 # default 0.2
   use_lambda: true # pose error checking
-  max_v: 3.0 # default 2.0
-  max_a: 3.0 # default 1.0
-  max_j: 3.0 # default 1.0
-  max_u: 1.0 # default 1.0
-  use_3d: true # use 3d local planner
-  z_cost_factor: 3 # global map z cost factor (cost_along_z = z_cost_factor * cost_along_x_or_y)
-  max_v_z: 1.0 # default 2.0
+  max_v: 10 #3.0 # default 2.0
+  max_a: 7 #2.0 # default 1.0
+  max_j: 5 #2.0 # default 1.0
+  max_u: 1 #1.0 # default 1.0
+  use_3d: false # use 3d planner
+  z_cost_factor: 2 # global map z cost factor (cost_along_z = z_cost_factor * cost_along_x_or_y)
+  max_v_z: 0.5 # default 2.0
   max_a_z: 2.0 # default 1.0
   max_j_z: 2.0 # default 1.0
-  max_u_z: 2.0 # default 1.0
+  max_u_z: 1.0 # default 1.0
   tol_pos: 3.0 # distance tolerance for goal region, 0 means no tolerance, -1 means no limitation
   global_goal_tol_vel: 3.0 # tolerance of acceleration for goal region
   global_goal_tol_acc: -1 # tolerance of velocity for goal region
@@ -48,15 +48,15 @@ trajectory_planner:
   ndt: 1.0 # default 1
   max_num: -1 # Maxmum number of expansion, -1 means no limitation
 
-stopping_policy:
+# stopping_policy:
   # TODO(xu) verify whether this is actually working!
-  acc_xyz_des: 15.0 # 
-  jerk_xyz_des: 5.0 #
-  acc_yaw_des: 0.1 # rad
+  # acc_xyz_des: 15.0 #
+  # jerk_xyz_des: 5.0 #
+  # acc_yaw_des: 0.1 # rad
 
 local_global_server:
-  crop_radius: 20 # crop length when cropping global path to get local goal, this should be less than local map's range
-  crop_radius_z: 3 # crop length along Z when cropping global path to get local goal, this should be less than local map's Z range
+  crop_radius: 30 # 10 # crop length when cropping global path to get local goal, this should be less than 0.5*(local map X (or Y) range)
+  crop_radius_z: 2 # crop length along Z when cropping global path to get local goal, this should be less than 0.5*(local map Z range)
   termination_distance: 5 # distance within which the final goal is regarded as reached 
   local_plan_timeout_duration: 2 # local planner timeout in seconds 
   global_plan_timeout_duration: 4 # global planner timeout in seconds 
