--- a/map_plan/map_plan_launch/config/mapper.yaml
+++ b/map_plan/map_plan_launch/config/mapper.yaml
@@ -1,8 +1,8 @@
 
 
 debug: true
-robot_r: 3.0 # map will be dilated in x and y directions for 2*[ceil(robot_r/res)] cells
-robot_h: 1.0 # map will be dilated in z direction for 2*[ceil(robot_h/res)] cells (if robot_r is set as 0, there will not be any dilation along z either).
+robot_r: 2.0 # map will be dilated in x and y with a radius of [ceil(robot_r/res)] cells
+robot_h: 0.0 # map will be dilated in z direction for 2*[ceil(robot_h/res)] cells (if robot_r is set as 0, there will not be any dilation along z either).
 
 global:
   center_x: 500.0
@@ -11,18 +11,18 @@ global:
   range_y: 2000.0
   center_z: 18
   range_z: 6.0
-  resolution: 2.0 # 3
+  resolution: 3.0 # 3
   num_point_cloud_skip: 1 # integer
   max_raycast_range: 100.0
   dilate_xy: true
   dilate_z: false
 
 local: # local map range z and center_z will be the same as storage map
-  range_x: 100.0 # 60
-  range_y: 100.0 # 60
+  range_x: 80.0 # 60
+  range_y: 80.0 # 60
   range_z: 2.0
   resolution: 0.25
-  max_raycast_range: 50.0
+  max_raycast_range: 30.0
 
 storage: # storage map max_raycat_range will be the same as local map
   center_x: 500.0
