--- a/control/control_launch/config/tracker_params_mp.yaml
+++ b/control/control_launch/config/tracker_params_mp.yaml
@@ -26,8 +26,8 @@ trajectory_tracker:
   max_pos_error: 2.0  # maximum tracker position error (in xy plane) allowed, default 1.0
 
 trajectory_planner:
-  debug: false # default false
-  verbose: false # default false
+  debug: true # default false
+  verbose: true # default false
   use_yaw: false # default false
   yaw_speed: 0.2 # default 0.2
   use_lambda: true # pose error checking
@@ -35,18 +35,19 @@ trajectory_planner:
   max_a: 7 # default for 2-D 7, for 3-D 2
   max_j: 5 # default for 2-D 5, for 3-D 2
   max_u: 3 # default for 2-D 3, for 3-D 1
-  use_3d: false # use 3d planner
+  use_3d: true # use 3d planner
   z_cost_factor: 2 # global map z cost factor (cost_along_z = z_cost_factor * cost_along_x_or_y)
   max_v_z: 0.5 # default 2.0
   max_a_z: 2.0 # default 1.0
   max_j_z: 2.0 # default 1.0
   max_u_z: 1.0 # default 1.0
   tol_pos: 5.0 # distance tolerance for goal region, 0 means no tolerance, -1 means no limitation
-  global_goal_tol_vel: 3.0 # tolerance of acceleration for goal region
+  global_goal_tol_vel: 2.0 # tolerance of acceleration for goal region
   global_goal_tol_acc: -1 # tolerance of velocity for goal region
-  dt: 1.0 # default 1
+  dt: 1.0 # execution time for each primitive
   ndt: 1.0 # default 1
   max_num: -1 # Maxmum number of expansion, -1 means no limitation
+  heuristic_weight: 25.0
 
 # stopping_policy:
   # TODO(xu) verify whether this is actually working!
@@ -55,9 +56,10 @@ trajectory_planner:
   # acc_yaw_des: 0.1 # rad
 
 local_global_server:
-  crop_radius: 30 # default for 2-D 30, for 3-D 20. crop length when cropping global path to get local goal, this should be less than 0.5*(local map X (or Y) range)
+  crop_radius: 18 # default for 2-D 30, for 3-D 20. crop length when cropping global path to get local goal, this should be less than 0.5*(local map X (or Y) range)
   crop_radius_z: 5 # crop length along Z when cropping global path to get local goal, this should be less than 0.5*(local map Z range)
-  termination_distance: 5 # distance within which the final goal is regarded as reached 
+  termination_distance: 3 # distance threshold, final goal reached 
+  close_to_final_dist: 10 # distance threshold, final goal close enough to turn on velocity and acceleration checking
   local_plan_timeout_duration: 1.0 # local planner timeout in seconds 
   global_plan_timeout_duration: 2.0 # global planner timeout in seconds 
   global_planner_verbose: true #
