--- a/map_plan/planning_ros_msgs/CMakeLists.txt
+++ b/map_plan/planning_ros_msgs/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.10)
 project(planning_ros_msgs)
 
 find_package(catkin REQUIRED COMPONENTS geometry_msgs nav_msgs
-                                        message_generation)
+                                        message_generation
+                                        actionlib_msgs)
 
 add_message_files(
   DIRECTORY
@@ -22,6 +23,8 @@ add_message_files(
   StateTransition.msg
   VoxelMap.msg)
 
-generate_messages(DEPENDENCIES geometry_msgs nav_msgs)
+add_action_files(DIRECTORY action FILES PlanPath.action PlanTwoPoint.action)
 
-catkin_package(CATKIN_DEPENDS geometry_msgs nav_msgs message_runtime)
+generate_messages(DEPENDENCIES geometry_msgs nav_msgs actionlib_msgs)
+
+catkin_package(CATKIN_DEPENDS geometry_msgs nav_msgs actionlib_msgs message_runtime)
