--- a/map_plan/map_plan_launch/config/mapper.yaml
+++ b/map_plan/map_plan_launch/config/mapper.yaml
@@ -7,27 +7,28 @@ robot_h: 0.5 # map will be dilated in z direction for 2*[ceil(robot_h/res)] cell
 global:
   center_x: 0.0
   center_y: 0.0
-  range_x: 1000.0
-  range_y: 1000.0
+  range_x: 500.0
+  range_y: 500.0
   center_z: 5 
   range_z: 10.0
-  resolution: 1.0 # 3
+  resolution: 2.0 # 3
   num_point_cloud_skip: 1 # integer
   max_raycast_range: 150.0
   dilate_xy: false
   dilate_z: false
 
 local: # local map range z and center_z will be the same as storage map
-  range_x: 70.0 # 60
-  range_y: 70.0 # 60
+  # local planning horizon will be from robot to the local voxel map boundary
+  range_x: 20.0
+  range_y: 20.0
   resolution: 0.25
-  max_raycast_range: 50.0
+  max_raycast_range: 20.0
 
 storage: # storage map max_raycat_range will be the same as local map
   center_x: 0.0
   center_y: 0.0
-  range_x: 1000.0
-  range_y: 1000.0
+  range_x: 500.0
+  range_y: 500.0
   center_z: 5
   range_z: 10.0
 
