--- a/map_plan/map_plan_launch/config/mapper.yaml
+++ b/map_plan/map_plan_launch/config/mapper.yaml
@@ -1,33 +1,34 @@
 
 
 debug: true
-robot_r: 1.5 # map will be dilated in x and y with a radius of [ceil(robot_r/res)] cells
+robot_r: 0.5 # map will be dilated in x and y with a radius of [ceil(robot_r/res)] cells
 robot_h: 0.5 # map will be dilated in z direction for 2*[ceil(robot_h/res)] cells (if robot_r is set as 0, there will not be any dilation along z either).
 
 global:
   center_x: 0.0
   center_y: 0.0
-  range_x: 1000.0
-  range_y: 1000.0
+  range_x: 500.0
+  range_y: 500.0
   center_z: 5 
   range_z: 10.0
   resolution: 2.0 # 3
   num_point_cloud_skip: 1 # integer
   max_raycast_range: 150.0
-  dilate_xy: true
+  dilate_xy: false
   dilate_z: false
 
 local: # local map range z and center_z will be the same as storage map
-  range_x: 70.0 # 60
-  range_y: 70.0 # 60
-  resolution: 0.3
-  max_raycast_range: 50.0
+  # local planning horizon will be from robot to the local voxel map boundary
+  range_x: 20.0
+  range_y: 20.0
+  resolution: 0.5
+  max_raycast_range: 20.0
 
 storage: # storage map max_raycat_range will be the same as local map
   center_x: 0.0
   center_y: 0.0
-  range_x: 1000.0
-  range_y: 1000.0
+  range_x: 500.0
+  range_y: 500.0
   center_z: 5
   range_z: 10.0
 
