--- a/control/control_launch/config/tracker_params_mp.yaml
+++ b/control/control_launch/config/tracker_params_mp.yaml
@@ -12,9 +12,6 @@
 #  default_yaw_v_des: 1.0
 #  default_yaw_a_des: 0.5
 
-stopping_policy:
-  default_a_des: 5.0
-  default_j_des: 1.0
 
 take_off_tracker:
   thrust_rate: 5.0
@@ -49,11 +46,13 @@ trajectory_planner:
   max_num: -1 # Maxmum number of expansion, -1 means no limitation
   heuristic_weight: 10.0
 
-# stopping_policy:
-  # TODO(xu) verify whether this is actually working!
-  # acc_xyz_des: 15.0 #
-  # jerk_xyz_des: 5.0 #
-  # acc_yaw_des: 0.1 # rad
+stopping_policy:
+  #TODO(xu) verify whether this is actually working!
+  acc_xy_des: 10.0 #
+  jerk_xy_des: 7.0 #
+  acc_z_des: 5.0 #
+  jerk_z_des: 3.0 #
+  acc_yaw_des: 0.05 # rad
 
 local_global_server:
   # local planning horizon will be from robot to the local voxel map boundary
