[WIP:] most bugs fixed, still having the tf issue

--- a/state_machine/fla_state_machine/package.xml
+++ b/state_machine/fla_state_machine/package.xml
@@ -16,6 +16,8 @@
   <depend>actionlib_msgs</depend>
   <depend>kr_mav_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>mapper</depend>
+
   <depend>traj_opt_ros</depend>
   <depend>planning_ros_utils</depend>
   <depend>planning_ros_msgs</depend>
