tf issue fixed, important fix to planning_rviz_plugins to accomodate the new updates to ROS RVIZ pkg, tested with ground truth odom, works. Need more testing with onboard sensing.

--- a/control/control_launch/config/tracker_params_mp.yaml
+++ b/control/control_launch/config/tracker_params_mp.yaml
@@ -60,5 +60,5 @@ local_global_server:
   local_plan_timeout_duration: 1.0 # local planner timeout in seconds 
   max_local_plan_trials: 3
   global_planner_verbose: false #
-  odom_frame: "odom"
-  map_frame: "map"
+  odom_frame: "quadrotor/odom"
+  map_frame: "quadrotor/map"
