change quadrotor_msgs references to kr_mav_control, added kr_mav_control in vcs file

--- a/autonomy_stack_repos.yaml
+++ b/autonomy_stack_repos.yaml
@@ -14,3 +14,7 @@ repositories:
     url: git@github.com:KumarRobotics/msckf_vio.git
     version: master
 
+  kr_mav_control:
+    type: git
+    url: git@github.com:KumarRobotics/kr_mav_control.git
+    version: master
