--- a/px4_interface/pkgs/mavros_interface/package.xml
+++ b/px4_interface/pkgs/mavros_interface/package.xml
@@ -13,7 +13,7 @@
   <depend>roscpp</depend>
   <depend>nav_msgs</depend>
   <depend>geometry_msgs</depend>
-  <depend>quadrotor_msgs</depend>
+  <depend>kr_mav_msgs</depend>
   <depend>mavros_msgs</depend>
   <depend>nodelet</depend>
 
