--- a/control/control_launch/config/tracker_params_mp.yaml
+++ b/control/control_launch/config/tracker_params_mp.yaml
@@ -55,8 +55,9 @@ stopping_policy:
 
 local_global_server:
   # local planning horizon will be from robot to the local voxel map boundary
-  termination_distance: 5 # distance threshold, final goal reached 
-  close_to_final_dist: 20 # distance-to-goal threshold, within which the velocity and acceleration checking will be turned on
+  waypoint_reach_threshold: 10.0 # distance threshold, within which intermidiate waypoint is regarded as reached 
+  final_goal_reach_threshold: 5.0 # within which final waypoint is regarded as reached, this should be smaller than waypoint_reach_threshold
+  close_to_final_dist: 20 # distance-to-goal threshold, within which the velocity and acceleration checking will be turned on, -1 means no velocity checking at all
   local_plan_timeout_duration: 1.0 # local planner timeout in seconds 
   max_local_plan_trials: 3
   global_planner_verbose: false #
