add minimal version of SplineTrajectory rviz plugin copied from Mike's traj_opt and made to work without it doesnt work for vel/acc viz yet

--- a/map_plan/planning_ros_utils/CMakeLists.txt
+++ b/map_plan/planning_ros_utils/CMakeLists.txt
@@ -53,6 +53,8 @@ set(SOURCE_FILES
     src/planning_rviz_plugins/path_array_display.cpp
     src/planning_rviz_plugins/primitive_array_display.cpp
     src/planning_rviz_plugins/trajectory_display.cpp
+    src/planning_rviz_plugins/spline_trajectory_display.cpp
+    src/planning_rviz_plugins/spline_trajectory_visual.cpp
     ${MOC_FILES})
 
 add_library(planning_rviz_plugins ${SOURCE_FILES})
