--- a/control/control_launch/config/tracker_params_mp.yaml
+++ b/control/control_launch/config/tracker_params_mp.yaml
@@ -28,16 +28,18 @@ trajectory_tracker:
 trajectory_planner:
   debug: false # default false
   verbose: false # default false
-  max_v: 5 # suggested for 2-D 9, for 3-D 3
+  max_v: 2 # suggested for 2-D 9, for 3-D 3
   max_a: 4 # suggested for 2-D 7, for 3-D 2
   max_j: 2 # suggested for 2-D 3, for 3-D 2
-  max_u: 2 # suggested for 2-D 3, for 3-D 1
-  use_3d: false # use 3d planner
+  max_u: 2 # suggested for 2-D 3, for 3-D 1, for each axis jerk increment choice is -max_u, 0, max_u
+  use_3d_local: true # use 3d planner
+
+  use_3d_global: false 
   z_cost_factor: 1 # global map z cost factor (cost_along_z = z_cost_factor * cost_along_x_or_y)
   max_v_z: 1.0 # default 2.0
   max_a_z: 2.0 # default 1.0
-  max_j_z: 2.0 # default 1.0
-  max_u_z: 1.0 # default 1.0
+  max_j_z: 1.5 # default 1.0
+  max_u_z: 0.5 # default 1.0
   tol_pos: 3.0 # distance tolerance for goal region, 0 means no tolerance, -1 means no limitation
   global_goal_tol_vel: 5.0 # tolerance of acceleration for goal region
   global_goal_tol_acc: -1 # tolerance of velocity for goal region
@@ -45,6 +47,7 @@ trajectory_planner:
   ndt: 1.0 # default 1
   max_num: -1 # Maxmum number of expansion, -1 means no limitation
   heuristic_weight: 5.0
+  vertical_semi_fov: 0.392 # vertical semi field of view (in rad), used for 3D planning only
 
 stopping_policy:
   acc_xy_des: 4.0 #
@@ -58,8 +61,9 @@ local_global_server:
   waypoint_reach_threshold: 10.0 # distance threshold, within which intermidiate waypoint is regarded as reached 
   final_goal_reach_threshold: 5.0 # within which final waypoint is regarded as reached, this should be smaller than waypoint_reach_threshold
   close_to_final_dist: 5 # distance-to-goal threshold, within which the velocity and acceleration checking will be turned on, -1 means no velocity checking at all
-  local_plan_timeout_duration: 1.0 # local planner timeout in seconds 
+  local_plan_timeout_duration: 1.0 # local planner timeout in seconds
   max_local_plan_trials: 3
+  max_horizon: 5 # defulat 5, should be larger than local_plan_timeout_duration*max_local_plan_trials*replan_rate 
   global_planner_verbose: false #
   odom_frame: "quadrotor/odom"
   map_frame: "quadrotor/map"
