add smach to state machine package.xml

--- a/autonomy_core/state_machine/state_machine_core/package.xml
+++ b/autonomy_core/state_machine/state_machine_core/package.xml
@@ -27,6 +27,7 @@
   <depend>kr_planning_rviz_plugins</depend>
   <depend>kr_planning_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>smach_ros</depend>
 
 
 
