--- a/autonomy_core/map_plan/mapper/CMakeLists.txt
+++ b/autonomy_core/map_plan/mapper/CMakeLists.txt
@@ -17,13 +17,11 @@ find_package(Boost REQUIRED COMPONENTS timer)
 
 catkin_package(INCLUDE_DIRS include LIBRARIES ${PROJECT_NAME})
 
-add_library(${PROJECT_NAME} src/tf_listener.cpp src/voxel_mapper.cpp)
-target_include_directories(${PROJECT_NAME} PUBLIC ${catkin_INCLUDE_DIRS}
+include_directories(${PROJECT_NAME} PUBLIC ${catkin_INCLUDE_DIRS}
                                                   include)
-target_link_libraries(${PROJECT_NAME} PUBLIC ${catkin_LIBRARIES})
 
-# add_executable(cloud_to_map src/cloud_to_map.cpp)
-# target_link_libraries(cloud_to_map PUBLIC ${PROJECT_NAME})
+add_library(${PROJECT_NAME} src/tf_listener.cpp src/voxel_mapper.cpp)
+target_link_libraries(${PROJECT_NAME} PUBLIC ${catkin_LIBRARIES})
 
 add_executable(local_global_mapper src/local_global_mapper.cpp)
 target_link_libraries(local_global_mapper PUBLIC ${PROJECT_NAME} Boost::timer)
