--- a/.github/workflows/docker-build-base.yaml
+++ b/.github/workflows/docker-build-base.yaml
@@ -4,7 +4,7 @@ name: docker-build-base
 on:
   push:
     paths:
-    - 'base/**'
+    - 'autonomy_core/base/**'
     branches: [master]
   workflow_dispatch:
   schedule:
@@ -34,7 +34,7 @@ jobs:
         with:
           push: true
           tags: kumarrobotics/autonomy:base
-          file: ./base/Dockerfile
+          file: ./autonomy_core/base/Dockerfile
           platforms: linux/amd64,linux/arm64
       -
         name: Image digest
