--- a/.github/workflows/docker-build-map-plan.yaml
+++ b/.github/workflows/docker-build-map-plan.yaml
@@ -11,7 +11,7 @@ on:
       - completed
   push:
     paths:
-    - 'map_plan/**'
+    - 'autonomy_core/map_plan/**'
     branches: [master]
   # DO NOT add a schedule. This build will be triggered by base schedule.
 
@@ -45,7 +45,7 @@ jobs:
           context: .
           push: true
           tags: kumarrobotics/autonomy:map_plan
-          file: ./map_plan/Dockerfile
+          file: ./autonomy_core/map_plan/Dockerfile
           platforms: linux/amd64,linux/arm64
       -
         name: Image digest
