--- a/autonomy_core/estimation/estimation_launch/CMakeLists.txt
+++ b/autonomy_core/estimation/estimation_launch/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
 project(estimation_launch)
 
-set(CMAKE_CXX_STANDARD 17)
-
 find_package(catkin REQUIRED)
+catkin_package()
