--- a/autonomy_core/map_plan/planning_ros_msgs/CMakeLists.txt
+++ b/autonomy_core/map_plan/planning_ros_msgs/CMakeLists.txt
@@ -2,8 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(planning_ros_msgs)
 
 find_package(catkin REQUIRED COMPONENTS geometry_msgs nav_msgs
-                                        message_generation
-                                        actionlib_msgs)
+                                        message_generation actionlib_msgs)
 
 add_message_files(
   DIRECTORY
@@ -27,4 +26,5 @@ add_action_files(DIRECTORY action FILES PlanPath.action PlanTwoPoint.action)
 
 generate_messages(DEPENDENCIES geometry_msgs nav_msgs actionlib_msgs)
 
-catkin_package(CATKIN_DEPENDS geometry_msgs nav_msgs actionlib_msgs message_runtime)
+catkin_package(CATKIN_DEPENDS geometry_msgs nav_msgs actionlib_msgs
+                              message_runtime)
