--- a/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
+++ b/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
@@ -21,7 +21,7 @@ take_off_tracker:
 
 trajectory_tracker:
   max_pos_error: 0.75  # maximum tracker position error (in xy plane) allowed, default 1.0
-  align_yaw: true # default false
+  align_yaw: false # default false
   yaw_speed_magnitude: 0.3 # in rad
   use_lambda: true # pose error checking
 
@@ -58,8 +58,8 @@ stopping_policy:
 
 local_global_server:
   # local planning horizon will be from robot to the local voxel map boundary
-  waypoint_reach_threshold: 20.0 # distance threshold, within which intermidiate waypoint is regarded as reached 
-  final_goal_reach_threshold: 20.0 # within which final waypoint is regarded as reached, this should be smaller than waypoint_reach_threshold
+  waypoint_reach_threshold: 10.0 # distance threshold, within which intermidiate waypoint is regarded as reached 
+  final_goal_reach_threshold: 10.0 # within which final waypoint is regarded as reached, this should be smaller than waypoint_reach_threshold
   close_to_final_dist: 5 # distance-to-goal threshold, within which the velocity and acceleration checking will be turned on, -1 means no velocity checking at all
   local_plan_timeout_duration: 1.0 # local planner timeout in seconds
   max_local_plan_trials: 1 # should be set as 1 since state machine is now able to try multiple times after planner failures
@@ -70,4 +70,4 @@ local_global_server:
 
 state_machine:
   replan_rate: 2.0 # calling local planner every (1/replan_rate) seconds
-  max_replan_trials: 20 # # max allowed trials to re-enter replanner
+  max_replan_trials: 50 # # max allowed trials to re-enter replanner
