update vcs file to remove ouster_decoder since it conflicts with os1 branch of ouster_example, update readme files, tested and working properlywq

--- a/external.yaml
+++ b/external.yaml
@@ -1,8 +1,8 @@
 repositories:
-  ouster_decoder:
-    type: git
-    url: git@github.com:versatran01/ouster_decoder.git 
-    version: main
+  # ouster_decoder:
+    # type: git
+    # url: git@github.com:versatran01/ouster_decoder.git
+    # version: main
   
   ouster_example:
     type: git
