Add Gazebo support (#94)
* change use_lauras flag to min_dispersion_planner to be formal

* adding mrsl_quadrotor repo into vcs file since we need it for gazebo sim

* change launch files and dependencies to make gazebo work properly

* update dependencies in README and update vcs files

* update vcs file to remove ouster_decoder since it conflicts with os1 branch of ouster_example, update readme files, tested and working properlywq

* fixing shellcheck-reviewdog issue

* second trial to fix shellcheck-reviewdog issue

* change flag name use_lauras to min_dispersion_planner in unity_sim sh file

* third trial to fix shellcheck-reviewdog issue, will break Laura tmux script

* use low resolution lidar for real time simulation

* update vcs file to adapt to changes in mrsl_quadrotor

--- a/external.yaml
+++ b/external.yaml
@@ -1,8 +1,8 @@
 repositories:
-  ouster_decoder:
-    type: git
-    url: git@github.com:versatran01/ouster_decoder.git 
-    version: main
+  # ouster_decoder:
+    # type: git
+    # url: git@github.com:versatran01/ouster_decoder.git
+    # version: main
   
   ouster_example:
     type: git
@@ -18,3 +18,13 @@ repositories:
     type: git
     url: git@github.com:KumarRobotics/kr_mav_control.git
     version: master
+
+  mrsl_quadrotor:
+    type: git
+    url: git@github.com:KumarRobotics/mrsl_quadrotor.git
+    version: master 
+
+  ouster_example:
+    type: git
+    url: git@github.com:wilselby/ouster_example.git
+    version: os-sim
