update unity simulator params

--- a/autonomy_core/estimation/estimation_launch/config/msckf_calib_simulation.yaml
+++ b/autonomy_core/estimation/estimation_launch/config/msckf_calib_simulation.yaml
@@ -1,24 +1,1 @@
-
-# The modifications of the output file from Kalibr:
-# 1. For each matrix (e.g. cam0/T_cam_imu), remove the brackets and minus sign for each line. Use one pair of brackets for each matrix.
-# 2. Add the T_imu_body at the end of the calibration file (usually set to identity).
-T_imu_body: [1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0,
-  0.0, 1.0]
-
-cam0:
-    T_cam_imu: [-1.4210854715202e-14, -0.9999999999999858, 2.384185791015625e-07, 0.09999847412109233, 0, -2.384185933124172e-07, -0.9999999999999858, 2.384149411503973e-08, 1.000000000000014, 0, -1.4210854715202e-14, -0.09999847412109517, 0, 0, 0, 1]
-    camera_model: pinhole
-    intrinsics: [173.9987021397093, 173.9987021397093, 240, 160]
-    distortion_model: radtan
-    distortion_coeffs: [0, 0, 0, 0]
-    resolution: [480, 320]
-    rostopic: /quadrotor/cam_left/image_raw
-cam1:
-    T_cam_imu: [-1.4210854715202e-14, -0.9999999999999858, 2.384185791015625e-07, -0.09999847412109233, 0, -2.384185933124172e-07, -0.9999999999999858, -2.384149411227554e-08, 1.000000000000014, 0, -1.4210854715202e-14, -0.09999847412109517, 0, 0, 0, 1]
-    camera_model: pinhole
-    intrinsics: [173.9987021397093, 173.9987021397093, 240, 160]
-    distortion_model: radtan
-    distortion_coeffs: [0, 0, 0, 0]
-    resolution: [480, 320]
-    rostopic: /quadrotor/cam_right/image_raw
-    T_cn_cnm1: [1.000000000000028, 1.4210854715202e-14, -1.421085810333399e-14, -0.1999969482421889, 1.4210854715202e-14, 1.000000000000028, 1.42108547152018e-14, -4.768298822731595e-08, -1.421085810333399e-14, 1.42108547152018e-14, 1.000000000000028, 4.246603069191224e-15, 0, 0, 0, 1]
+msckf_calib_simulation-for-w480-h320.yaml
