--- a/autonomy_core/control/control_launch/package.xml
+++ b/autonomy_core/control/control_launch/package.xml
@@ -7,7 +7,7 @@
     <maintainer email="liuxu@seas.upenn.edu">Xu Liu</maintainer>
     <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
     
-    <license>MIT</license>
+    <license>Penn Software License</license>
     <buildtool_depend>catkin</buildtool_depend>
 
     <export>
